k8s/mario-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario-service
  namespace: mario

spec:
  selector:
    app: mario

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
