k8s/mario-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mario-ingress
  namespace: mario

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: mario-service
            port:
              number: 80
